Modified styles. Fixed overflows

--- a/src/style.css
+++ b/src/style.css
@@ -50,11 +50,15 @@
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
+  padding: 0;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
@@ -63,6 +67,7 @@ body {
 canvas {
   position: fixed;
   top: 0;
+  left: 0;
   margin: 0;
   z-index: -1000;
 }
